Major safety refactor: CH340→CANable, UV migration, 5-node support
- Removed CH340 dependencies, migrated to MKS CANable (/dev/ttyACM0)
- Switched Python env from venv to UV package manager
- Implemented 5-node MIT control architecture with multi-motor launch files
- Completed comprehensive safety audit with critical fixes:
  * Input validation on all control commands
  * Rate limiting (1ms minimum interval)
  * Emergency stop functionality
  * Parameter verification after setting
- Added safety_utils module for reusable safety features
- Created ROS2 integration guide and automated test scripts
- Updated all documentation to reflect hardware/tooling changes

All code safety-audited and production-ready.

--- a/rs03_driver/config/rs03_params.yaml
+++ b/rs03_driver/config/rs03_params.yaml
@@ -4,7 +4,7 @@
 rs03_actuator:
   ros__parameters:
     # CAN Interface
-    can_port: "/dev/ch340_can"
+    can_port: "/dev/ttyACM0"
     bitrate: 1000000
     can_id: 107
     
