Add validation tools and testing framework
- Hardware validation script with reduced safety limits
- Incremental multi-motor validation (1->5 motors)
- Latency measurement and profiling tool
- Trajectory following framework (sine, trapezoidal, multi-motor)
- C++ SDK migration plan
- Updated documentation and validation suite script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,8 @@ requires-python = ">=3.8"
 dependencies = [
     "python-dotenv",
     "python-can",
+    "numpy",
     "robstride @ git+https://github.com/sirwart/robstride",
-]
-
-[project.optional-dependencies]
-ros2 = [
-    "rclpy",
 ]
 
 [build-system]
